# homematicip-rest-api

./: .buildinfo  .gitattributes  .gitignore  404.html  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  SampleLibrary.sln  UpgradeLog.htm  _setup.cfg  api_introduction.html  async_homematicip_cli.py  codecov.yml  config.py.example  dump_devicevalues.py  generate_auth_token.py  genindex.html  gettingstarted.html  hmip_cli.py  hmip_generate_auth_token.py  hmip_generate_auth_token_async.py  homematicip.aio.html  homematicip.base.html  homematicip.html  homematicip.pyperf  homematicip.pyproj  homematicip.sln  homematicip_cli.py  homematicip_cli_async.py  index.html  list_devices.py  list_groups.py  list_securityJournal.py  make  make_docs.py  (+22 more)
.circleci/: config.yml
.doctrees/: api_introduction.doctree  environment.pickle  gettingstarted.doctree  homematicip.aio.doctree  homematicip.base.doctree  homematicip.doctree  index.doctree  modules.doctree
.github/: copilot-instructions.md
.github/workflows/: build-docs.yml  codeql-analysis.yml  publish.yml  publish_v2_branch.yml  python-publish.yml  test-on-push.yml  test.yml
CheckPresenceOnPing/: CheckPresenceOnPing.pyproj  Readme.md  scan.py
ControlDevides/: switch_on_off.py
GetDevicesAndValues/: README.md  api.py
QRCodeGenerator/: QRCodeGenerator.pyproj  Readme.md  qrcodegenerator.py  qrcodes_template.html
SampleTemplate/: Readme.md  SampleTemplate.pyproj  empty.py
TelegramNotificationBot/: TelegramNotificationBot.py  requirements.txt
_modules/: homematicip.html  index.html
_modules/homematicip/: EventHook.html  access_point_update_state.html  auth.html  client.html  connection.html  device.html  functionalHomes.html  group.html  home.html  location.html  oauth_otk.html  rule.html  securityEvent.html  weather.html
_sources/: gettingstarted.rst.txt  modules.rst.txt
_static/: documentation_options.js
api-introduction/: index.html
batch-testing/: index.html
changelog/: index.html
data/: output-format.json
docs/: api-introduction.md  api_reference.py  batch-testing.md  changelog.md  create_apidoc.bat  getting-started.md  index.md  make.bat  modules.rst
docs/reference/: api-introduction.md
docs/source/: api_introduction.rst  changelog.rst  conf.py  gettingstarted.rst  hmipoverview.rst  homematicip.rst  (+6 more)
examples/: list_devices.py  show_firmware.py
getting-started/: index.html
homematicip/: EventHook.py  HomeMaticIPObject.py  __init__.py  _version.py  auth.py  class_maps.py  client.py  connection.py  device.py  functionalChannels.py  functionalHomes.py  group.py  home.py  oauth_otk.py  rule.py  securityEvent.py  weather.py
homematicip_demo/: __init__.py  client.pem  fake_cloud_server.py  helper.py  hmip_batch.json  server.key  server.pem
homematicip_samples/: README.md  SampleLibrary.sln
scripts/: blub.py  hmip_cli.py  mp3p_test.py
search/: search_index.json
tests/: conftest.py  fake_cloud_server.py  fake_hmip_server.py  helpers.py  incoming.py  server.crt  server.key  test_async_heating_group.py  test_async_home.py  test_auth.py  test_base_connection.py  test_config.py  test_connection_async.py  test_connection_base.py  test_device_base.py  test_devices.py  test_fake_cloud.py  test_functional_channels.py  test_groups.py  test_hmip_cli.py  test_home.py  test_home_base.py  test_misc.py  test_plugable_switch_measuring_async.py  test_pluggable_switch_async.py  test_pluggable_switch_base.py  test_runner.py  test_websocket.py
(+284 files in other folders)
