[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8.0"]

[project]
name = "homematicip"
description = "An API for the homematicip cloud"
readme = "README.md"
dependencies = [
  "pydantic",
  "websockets",
  "httpx",
  "click",
  "alive-progress"
]
requires-python = ">=3.12"
authors = [
  {name = "Thomas Hahn", email = "homematicip-rest-api@outlook.com"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]
keywords = ["homematicip cloud","homematicip"]
version = "1.1.0"


[project.scripts]
hmip = "homematicip.cli.hmip_cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
#addopts = "--cov=src --cov-report term-missing"

[tool.coverage.run]
source = ["src"]
