[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8.0"]

[project]
name = "homematicip"
description = "An API for the homematicip cloud"
readme = "README.md"
dependencies = [
  "pydantic==1.10.*",
  "websockets==12.0",
  "httpx==0.27.0",
  "click==8.1.7",
  "alive-progress==3.1.5"
]
requires-python = ">=3.12"
authors = [
  {name = "Thomas Hahn", email = "homematicip-rest-api@outlook.com"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]
keywords = ["homematicip cloud","homematicip"]
dynamic = [
    "version"
]

[project.urls]
Homepage = "https://github.com/hahn-th/homematicip-rest-api"
Repository = "https://github.com/hahn-th/homematicip-rest-api.git"
Issues = "https://github.com/hahn-th/homematicip-rest-api/issues"
Changelog = "https://github.com/hahn-th/homematicip-rest-api/blob/master/CHANGELOG.md"

[tool.setuptools_scm]
version_file = "src/homematicip/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"


[project.scripts]
hmip = "homematicip.cli.hmip:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
#addopts = "--cov=src --cov-report term-missing"

[tool.coverage.run]
source = ["src"]
